--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <header>
-        <div>
+            <section>
                 <nav>
-                    <a href="">WebStudio</a>
+                    <a href="#">WebStudio</a>
                         <ul>
-                            <li><a href="">Студія</a></li>
-                            <li><a href="">Портфоліо</a></li>
-                            <li><a href="">Контакти</a></li>
+                            <li><a href="#">Студія</a></li>
+                            <li><a href="#">Портфоліо</a></li>
+                            <li><a href="#">Контакти</a></li>
                         </ul>
                 </nav>
                 <ul>
-                    <li><a href="">info@devstudio.com</a></li>
-                    <li><a href="">+38 096 111 11 11</a></li>
+                    <li><a href="#">info@devstudio.com</a></li>
+                    <li><a href="#">+38 096 111 11 11</a></li>
                 </ul>
-            </div>
+            </section>
     </header>
 
     <main>
@@ -32,61 +32,49 @@
             <button type="button">Замовити послугу</button>
         </section>
 
-            <div>
-                <p>УВАГА ДО ДЕТАЛЕЙ</p>
-                <ul>
-                    <li>
-                        <P>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</P>
-                    </li>
-                </ul>
-                <p>ПУНКТУАЛЬНІСТЬ</p>
-                <ul>
-                    <li>
-                        <P>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</P>
-                    </li>
-                </ul>
-                <p>ПЛАНУВАННЯ</p>
-                <ul>
-                    <li>
-                        <P>Так само консультація з широким активом значною мірою зумовлює.</P>
-                    </li>
-                </ul>
-                <p>СУЧАСНІ ТЕХНОЛОГІЇ</p>
-                <ul>
-                    <li>
-                        <P>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</P>
-                    </li>
-                </ul>
-            </div>
-            <H2>Чим ми займаємося</H2>
+        <section>
+                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                <h3>ПЛАНУВАННЯ</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+        </section>
+
+        <section>
+            <h2>Чим ми займаємося</h2>
                 <ul>
                     <li><img src="./img/img33.jpg" alt="зображено як людські руки друкують на кравіатурі в планшет"></li>
                     <li><img src="./img/img(11).jpg" alt="зображено як людські руки тримають смартфон у руках сидячі за ноутбуком"></li>
                     <li><img src="./img/img(22).jpg" alt="зображено як людські руки тримають планшет на якому зображена палітра"></li>
                 </ul>
+        </section>
+        
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li><img src="./img/img.jpg" alt="зображений чоловік" width="270">
-                    <p><b>Ігор Дем'яненко</b></p>
+                    <p>Ігор Дем'яненко</p>
                     <p>Product Designer</p>
                 </li>
             </ul>
-            <Ul>
+            <ul>
                 <li><img src="./img/img(1).jpg" alt="зображена жінка" width="270">
-                    <p><b>Ольга Рєпіна</b></p>
+                    <p>Ольга Рєпіна</p>
                     <p>Frontend Developer</p>
                 </li>
-            </Ul>
+            </ul>
             <ul>
                 <li><img src="./img/img(2).jpg" alt="зображений чоловік" width="270">
-                    <p><b>Микола Тарасов</b></p>
+                    <p>Микола Тарасов</p>
                     <p>Marketing</p>
                 </li>
-            </Ul>
+            </ul>
             <ul>
                 <li><img src="./img/img(3).jpg" alt="зображений чоловік" width="270">
-                    <p><b>Михайло Єрмаков</b></p>
+                    <p>Михайло Єрмаков</p>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -94,14 +82,15 @@
     </main>
 
     <footer>
-        <a href="">WebStudio</a>
-        <address>
-            м. Київ, пр-т Лесі Українки, 26
-        </address>
-        <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
-        </ul>
+        <a href="#">WebStudio</a>
+            <address>
+                 м. Київ, пр-т Лесі Українки, 26
+            </address>
+                <ul>
+                    <li><a href="#">info@devstudio.com</a></li>
+                    <li><a href="#">+38 096 111 11 11</a></li>
+                </ul>
+        
     </footer>
 </body>
 </html>
