--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-            <section>
+            <div>
                 <nav>
                     <a href="#">WebStudio</a>
                         <ul>
@@ -21,7 +21,7 @@
                     <li><a href="#">info@devstudio.com</a></li>
                     <li><a href="#">+38 096 111 11 11</a></li>
                 </ul>
-            </section>
+            </div>
     </header>
 
     <main>
@@ -51,7 +51,7 @@
                     <li><img src="./img/img(22).jpg" alt="зображено як людські руки тримають планшет на якому зображена палітра"></li>
                 </ul>
         </section>
-        
+
         <section>
             <h2>Наша команда</h2>
             <ul>
@@ -85,12 +85,11 @@
         <a href="#">WebStudio</a>
             <address>
                  м. Київ, пр-т Лесі Українки, 26
-            </address>
                 <ul>
                     <li><a href="#">info@devstudio.com</a></li>
                     <li><a href="#">+38 096 111 11 11</a></li>
                 </ul>
-        
+            </address>
     </footer>
 </body>
 </html>
