--- a/index.html
+++ b/index.html
@@ -8,20 +8,18 @@
 </head>
 <body>
     <header>
-            <div>
-                <nav>
-                    <a href="#">WebStudio</a>
-                        <ul>
-                            <li><a href="#">Студія</a></li>
-                            <li><a href="#">Портфоліо</a></li>
-                            <li><a href="#">Контакти</a></li>
-                        </ul>
-                </nav>
+        <nav>
+            <a href="">WebStudio</a>
                 <ul>
-                    <li><a href="#">info@devstudio.com</a></li>
-                    <li><a href="#">+38 096 111 11 11</a></li>
+                    <li><a href="">Студія</a></li>
+                    <li><a href="">Портфоліо</a></li>
+                    <li><a href="">Контакти</a></li>
                 </ul>
-            </div>
+        </nav>
+        <ul>
+            <li><a href="">info@devstudio.com</a></li>
+            <li><a href="">+38 096 111 11 11</a></li>
+        </ul>
     </header>
 
     <main>
@@ -35,19 +33,19 @@
         <section>
             <ul>
                 <li>
-                    <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h2>ПЛАНУВАННЯ</h2>
+                    <h3>ПЛАНУВАННЯ</h3>
                     <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
@@ -92,12 +90,12 @@
     </main>
 
     <footer>
-        <a href="#">WebStudio</a>
+        <a href="">WebStudio</a>
             <address>
                  м. Київ, пр-т Лесі Українки, 26
                 <ul>
-                    <li><a href="#">info@devstudio.com</a></li>
-                    <li><a href="#">+38 096 111 11 11</a></li>
+                    <li><a href="">info@devstudio.com</a></li>
+                    <li><a href="">+38 096 111 11 11</a></li>
                 </ul>
             </address>
     </footer>
