--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <a href="">WebStudio</a>
                 <ul>
-                    <li><a href="">Студія</a></li>
+                    <li><a href="1">Студія</a></li>
                     <li><a href="">Портфоліо</a></li>
                     <li><a href="">Контакти</a></li>
                 </ul>
