--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 </ul>
         </nav>
         <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
@@ -31,6 +31,7 @@
         </section>
 
         <section>
+            <h2>Особливості</h2>
             <ul>
                 <li>
                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -86,10 +87,10 @@
     <footer>
         <a href="">WebStudio</a>
             <address>
-                 м. Київ, пр-т Лесі Українки, 26
+                 <p>м. Київ, пр-т Лесі Українки, 26</p>
                 <ul>
-                    <li><a href="">info@devstudio.com</a></li>
-                    <li><a href="">+38 096 111 11 11</a></li>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
                 </ul>
             </address>
     </footer>
